responsive: fixes feed toggle position on mobile

--- a/components/path/stylesheets/path.styl
+++ b/components/path/stylesheets/path.styl
@@ -201,3 +201,6 @@
 @media (max-width:500px)
   .path.stuck
     display none
+  
+  .root__toggle
+    margin -3px 0 0 0
